Rollback a antes de formtastic

--- a/app/views/patients/index.html.erb
+++ b/app/views/patients/index.html.erb
@@ -1,26 +1,23 @@
-<section id="tabla">
-<div class="page-header"><h1>Patients</h1></div>
-<div class="row">
-<table class="bordered-table zebra-striped">
-  <thead>
-	  <tr>
-	    <th>First name</th>
-	    <th>Last name</th>
-	    <th>Identification</th>
-	    <th>Sex</th>
-	    <th>Birthdate</th>
-	    <th>Address 1</th>
-	    <th>Address 2</th>
-	    <th>City</th>
-	    <th>Country</th>
-	    <th>Address state</th>
-	    <th>Phone</th>
-	    <th>Mobile phone</th>
-	    <th></th>
-	    <th></th>
-	    <th></th>
-	  </tr>
-  </thead>
+<h1>Listing patients</h1>
+
+<table>
+  <tr>
+    <th>First name</th>
+    <th>Last name</th>
+    <th>Identification</th>
+    <th>Sex</th>
+    <th>Birthdate</th>
+    <th>Address 1</th>
+    <th>Address 2</th>
+    <th>City</th>
+    <th>Country</th>
+    <th>Address state</th>
+    <th>Phone</th>
+    <th>Mobile phone</th>
+    <th></th>
+    <th></th>
+    <th></th>
+  </tr>
 
 <% @patients.each do |patient| %>
   <tr>
@@ -42,9 +39,6 @@
   </tr>
 <% end %>
 </table>
-</div>
-</div>
-</section>
 
 <br />
 
