--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,37 +1,45 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>MStrack</title>
-  <%= stylesheet_link_tag    "application" %>
-  <%= javascript_include_tag "application" %>
-  <%= csrf_meta_tags %>
-</head>
-<body style="padding-top: 60px">
-  <div class="topbar">
-    <div class="topbar-inner">
-      <div class="container-fluid">
-        <h3><%= link_to image_tag("logoiatm_white.png", :border=>0, :height => 25), root_path %>  <%= link_to "MSTrack v0.1", "/" %></h3>
-        <ul class="nav">
-          <li><%= link_to "Sign out", destroy_user_session_path, :method => :delete %></li>
-        </ul>
-      </div>
+	<head>
+	  <title>IATM MStrack</title>
+	  <%= stylesheet_link_tag    "application" %>
+	  <%= javascript_include_tag "application" %>
+	  <%= csrf_meta_tags %>
+	</head>
+	<body style="padding-top: 60px">
+	  <div class="topbar">
+	    <div class="topbar-inner">
+	      <div class="container-fluid">
+	        <h3><%= link_to image_tag("logoiatm_white.png", :border=>0, :height => 25), root_path %>  <%= link_to "MSTrack v0.1", "/" %></h3>
+	        <ul class="nav">
+	          <li><%= link_to "Sign out", destroy_user_session_path, :method => :delete %></li>
+	        </ul>
+	      </div>
 
-    </div>
-  </div>
-  <div class="container-fluid">
-    <div class="sidebar">
-      <div class="well">
-        <h5>Menu</h5>
-        <ul>
-          <li><%= link_to "Link1", "/path1"  %></li>
-          <li><%= link_to "Link2", "/path2"  %></li>
-          <li><%= link_to "Link3", "/path3"  %></li>
-        </ul>
-      </div>
-    </div>
-    <div class="content">
-      <%= yield %>
-    </div>
-  </div>
-</body>
+	    </div>
+	  </div>
+		<div class="container-fluid">
+			<div class="sidebar">
+				<div class="well">
+					<%= render :partial => 'common/side_menu' %>
+				</div>
+			</div>
+		</div>
+		<div class="container-fluid">
+			<div class="content">
+				<div class="page-header">
+					<%= render :partial => 'common/header' %>
+				</div>
+				<div class="row">
+					<div class="span16">
+						<%= render :partial => 'common/flashes' %>
+						<%= yield %>
+					</div>
+				</div>
+				<footer>
+					<%= render :partial => 'common/footer' %>
+				</footer>
+			</div>
+		</div>
+	</body>
 </html>
