--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,45 +1,48 @@
 <!DOCTYPE html>
 <html>
-	<head>
-	  <title>IATM MStrack</title>
-	  <%= stylesheet_link_tag    "application" %>
-	  <%= javascript_include_tag "application" %>
-	  <%= csrf_meta_tags %>
-	</head>
-	<body style="padding-top: 60px">
-	  <div class="topbar">
-	    <div class="topbar-inner">
-	      <div class="container-fluid">
-	        <h3><%= link_to image_tag("logoiatm_white.png", :border=>0, :height => 25), root_path %>  <%= link_to "MSTrack v0.1", "/" %></h3>
-	        <ul class="nav">
-	          <li><%= link_to "Sign out", destroy_user_session_path, :method => :delete %></li>
-	        </ul>
-	      </div>
+<head>
+  <meta charset="utf-8">
+  <title>Bootstrap, from Twitter</title>
+  <meta name="description" content="">
+  <meta name="author" content="">
 
-	    </div>
-	  </div>
-		<div class="container-fluid">
-			<div class="sidebar">
-				<div class="well">
-					<%= render :partial => 'common/side_menu' %>
-				</div>
-			</div>
-		</div>
-		<div class="container-fluid">
-			<div class="content">
-				<div class="page-header">
-					<%= render :partial => 'common/header' %>
-				</div>
-				<div class="row">
-					<div class="span16">
-						<%= render :partial => 'common/flashes' %>
-						<%= yield %>
-					</div>
-				</div>
-				<footer>
-					<%= render :partial => 'common/footer' %>
-				</footer>
-			</div>
-		</div>
-	</body>
+  <!-- Le HTML5 shim, for IE6-8 support of HTML elements -->
+  <!--[if lt IE 9]>
+    <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+  <![endif]-->
+
+  <%= stylesheet_link_tag    "application" %>
+  <%= javascript_include_tag "application" %>
+  <%= csrf_meta_tags %>
+</head>
+<body>
+  <div class="topbar">
+    <div class="fill">
+      <div class="container">
+        <%= link_to "Project name", "#", :class => "brand" %>
+        <ul class="nav">
+          <li class="active"><a href="#">Home</a></li>
+          <li><a href="#about">About</a></li>
+          <li><a href="#contact">Contact</a></li>
+        </ul>
+      </div>
+    </div>
+  </div>
+  <% flash.each do |name, msg| %>
+    <%= content_tag :div, :class => "container alert-message #{name == :error ? "error" : "success" }", :"data-alert" => "alert" do %>
+      <a class="close" href="#">×</a>
+      <p><%= msg %></p>
+    <% end %>
+  <% end %>
+  <div class="container">
+    <div class="row">
+      <div class="span16">
+<%= yield %>
+      </div>
+    </div>
+    <footer>
+      <p>&copy; Company 2011</p>
+    </footer>
+  </div>
+</body>
 </html>
