--- a/lib/templates/erb/scaffold/show.html.erb
+++ b/lib/templates/erb/scaffold/show.html.erb
@@ -1,10 +1,13 @@
-<%%= show_for @<%= singular_name %> do |s| %>
-<% attributes.each do |attribute| -%>
-  <%%= s.<%= attribute.reference? ? :association : :attribute %> :<%= attribute.name %> %>
-<% end -%>
-<%% end %>
-
-<div class="actions">
-  <%%= link_to 'Edit', edit_<%= singular_name %>_path(@<%= singular_name %>), :class=>"btn" %>
-  <%%= link_to 'Back', <%= plural_name %>_path, :class=>"btn" %>
+<div class="page-header">
+  <%%= link_to 'Back', <%= index_helper %>_path, :class => 'btn' %>
+  <%%= link_to 'Edit', edit_<%= singular_table_name %>_path(@<%= singular_table_name %>), :class => 'btn primary' %>
+  <h1>Listing <%= plural_table_name %></h1>
 </div>
+
+<dl>
+  <%- attributes.each do |attribute| -%>
+  <dt><%= attribute.human_name %>:</dt>
+  <dd><%%= @<%= singular_table_name %>.<%= attribute.name %> %></dd>
+
+  <%- end -%>
+</dl>
