--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,32 +17,60 @@
 </head>
 <body>
   <div class="topbar">
-    <div class="fill">
-      <div class="container">
-        <%= link_to "Project name", "#", :class => "brand" %>
+    <div class="topbar-inner">
+      <div class="container-fluid">
+        <a class="brand" href="#">Project name</a>
         <ul class="nav">
           <li class="active"><a href="#">Home</a></li>
           <li><a href="#about">About</a></li>
           <li><a href="#contact">Contact</a></li>
         </ul>
+        <p class="pull-right">Logged in as <a href="#">username</a></p>
       </div>
     </div>
   </div>
-  <% flash.each do |name, msg| %>
-    <%= content_tag :div, :class => "container alert-message #{name == :error ? "error" : "success" }", :"data-alert" => "alert" do %>
-      <a class="close" href="#">×</a>
-      <p><%= msg %></p>
-    <% end %>
-  <% end %>
-  <div class="container">
-    <div class="row">
-      <div class="span16">
-<%= yield %>
+  <div class="container-fluid">
+    <div class="sidebar">
+      <div class="well">
+        <h5>Sidebar</h5>
+        <ul>
+          <li><a href="#">Link</a></li>
+          <li><a href="#">Link</a></li>
+          <li><a href="#">Link</a></li>
+          <li><a href="#">Link</a></li>
+        </ul>
+        <h5>Sidebar</h5>
+        <ul>
+          <li><a href="#">Link</a></li>
+          <li><a href="#">Link</a></li>
+          <li><a href="#">Link</a></li>
+          <li><a href="#">Link</a></li>
+          <li><a href="#">Link</a></li>
+          <li><a href="#">Link</a></li>
+        </ul>
+        <h5>Sidebar</h5>
+        <ul>
+          <li><a href="#">Link</a></li>
+          <li><a href="#">Link</a></li>
+        </ul>
       </div>
     </div>
-    <footer>
-      <p>&copy; Company 2011</p>
-    </footer>
+    <% flash.each do |name, msg| %>
+      <%= content_tag :div, :class => "container alert-message #{name == :error ? "error" : "success" }", :"data-alert" => "alert" do %>
+        <a class="close" href="#">×</a>
+        <p><%= msg %></p>
+      <% end %>
+    <% end %>
+    <div class="content">
+      <div class="row">
+        <div class="span16">
+<%= yield %>
+        </div>
+      </div>
+      <footer>
+        <p>&copy; Company 2011</p>
+      </footer>
+    </div>
   </div>
 </body>
 </html>
