--- a/app/views/patients/show.html.erb
+++ b/app/views/patients/show.html.erb
@@ -1,65 +1,65 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <b>First name:</b>
+  <b>Nombre:</b>
   <%= @patient.first_name %>
 </p>
 
 <p>
-  <b>Last name:</b>
+  <b>Apellido:</b>
   <%= @patient.last_name %>
 </p>
 
 <p>
-  <b>Identification:</b>
+  <b>Identificacion:</b>
   <%= @patient.identification %>
 </p>
 
 <p>
-  <b>Sex:</b>
+  <b>Sexo:</b>
   <%= @patient.sex %>
 </p>
 
 <p>
-  <b>Birthdate:</b>
+  <b>Fecha Nacimiento:</b>
   <%= @patient.birthdate %>
 </p>
 
 <p>
-  <b>Address 1:</b>
+  <b>Direccion 1:</b>
   <%= @patient.address_1 %>
 </p>
 
 <p>
-  <b>Address 2:</b>
+  <b>Direccion 2:</b>
   <%= @patient.address_2 %>
 </p>
 
 <p>
-  <b>City:</b>
+  <b>Ciudad:</b>
   <%= @patient.city %>
 </p>
 
 <p>
-  <b>Country:</b>
+  <b>Pais:</b>
   <%= @patient.country %>
 </p>
 
 <p>
-  <b>Address state:</b>
+  <b>Estado:</b>
   <%= @patient.address_state %>
 </p>
 
 <p>
-  <b>Phone:</b>
+  <b>Telefono:</b>
   <%= @patient.phone %>
 </p>
 
 <p>
-  <b>Mobile phone:</b>
+  <b>Celular:</b>
   <%= @patient.mobile_phone %>
 </p>
 
 
-<%= link_to 'Edit', edit_patient_path(@patient) %> |
-<%= link_to 'Back', patients_path %>
+<%= link_to 'Editar', edit_patient_path(@patient) %> |
+<%= link_to 'Atras', patients_path %>
