--- a/lib/templates/erb/scaffold/new.html.erb
+++ b/lib/templates/erb/scaffold/new.html.erb
@@ -1,6 +1,6 @@
 <div class="page-header">
-  <%%= link_to 'Back', <%= index_helper %>_path, :class => 'btn' %>
-  <h1>New <%= singular_table_name %></h1>
+  <%%= link_to 'Atras', <%= index_helper %>_path, :class => 'btn' %>
+  <h1>Nuevo <%= singular_table_name %></h1>
 </div>
 
 <%%= render 'form' %>
