--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Bootstrap, from Twitter</title>
+  <title>IATM MSTrack</title>
   <meta name="description" content="">
   <meta name="author" content="">
 
@@ -19,40 +19,28 @@
   <div class="topbar">
     <div class="topbar-inner">
       <div class="container-fluid">
-        <a class="brand" href="#">Project name</a>
+        <a class="brand" href="#">IATM MSTrack v0.2</a>
         <ul class="nav">
-          <li class="active"><a href="#">Home</a></li>
-          <li><a href="#about">About</a></li>
-          <li><a href="#contact">Contact</a></li>
+          <li class="active"><a href="#">Inicio</a></li>
+          <li><a href="#about">Acerca de</a></li>
+          <li><a href="#contact">Contactenos</a></li>
         </ul>
-        <p class="pull-right">Logged in as <a href="#">username</a></p>
+        <p class="pull-right">Ingresado como <a href="#">username</a></p>
       </div>
     </div>
   </div>
   <div class="container-fluid">
     <div class="sidebar">
       <div class="well">
-        <h5>Sidebar</h5>
-        <ul>
-          <li><a href="#">Link</a></li>
-          <li><a href="#">Link</a></li>
-          <li><a href="#">Link</a></li>
-          <li><a href="#">Link</a></li>
-        </ul>
-        <h5>Sidebar</h5>
-        <ul>
-          <li><a href="#">Link</a></li>
-          <li><a href="#">Link</a></li>
-          <li><a href="#">Link</a></li>
-          <li><a href="#">Link</a></li>
-          <li><a href="#">Link</a></li>
-          <li><a href="#">Link</a></li>
-        </ul>
-        <h5>Sidebar</h5>
-        <ul>
-          <li><a href="#">Link</a></li>
-          <li><a href="#">Link</a></li>
-        </ul>
+		<h5>Menu</h5>
+		<ul>
+			<li><%= link_to "Información sociodemográfica", "/path1"  %></li>
+			<li><%= link_to "Antecedentes", "/path1"  %></li>
+			<li><%= link_to "Enfermedad actual", "/path1"  %></li>
+			<li><%= link_to "Examen físico", "/path1"  %></li>
+			<li><%= link_to "Diagnóstico", "/path1"  %></li>
+			<li><%= link_to "Discapacidad", "/path1"  %></li>
+		</ul>
       </div>
     </div>
     <% flash.each do |name, msg| %>
