--- a/app/views/patients/new.html.erb
+++ b/app/views/patients/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New patient</h1>
+<h1>Nuevo paciente</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Back', patients_path %>
+<%= link_to 'Atras', patients_path %>
