--- a/lib/templates/erb/controller/view.html.erb
+++ b/lib/templates/erb/controller/view.html.erb
@@ -1,4 +1,4 @@
 <div class="page-header">
   <h1><%= class_name %>#<%= @action %></h1>
 </div>
-<p>Find me in <%= @path %></p>
+<p>Encuentreme en <%= @path %></p>
