--- a/lib/templates/erb/scaffold/edit.html.erb
+++ b/lib/templates/erb/scaffold/edit.html.erb
@@ -1,7 +1,7 @@
 <div class="page-header">
-  <%%= link_to 'Back', <%= index_helper %>_path, :class => 'btn' %>
-  <%%= link_to 'Show', @<%= singular_table_name %>, :class => 'btn primary' %>
-  <h1>Editing <%= singular_table_name %></h1>
+  <%%= link_to 'Atras', <%= index_helper %>_path, :class => 'btn' %>
+  <%%= link_to 'Ver', @<%= singular_table_name %>, :class => 'btn primary' %>
+  <h1>Editando <%= singular_table_name %></h1>
 </div>
 
 <%%= render 'form' %>
