--- a/lib/templates/erb/scaffold/index.html.erb
+++ b/lib/templates/erb/scaffold/index.html.erb
@@ -1,6 +1,6 @@
 <div class="page-header">
-  <%%= link_to 'New <%= human_name %>', new_<%= singular_table_name %>_path, :class => 'btn primary' %>
-  <h1>Listing <%= plural_table_name %></h1>
+  <%%= link_to 'Nuevo <%= human_name %>', new_<%= singular_table_name %>_path, :class => 'btn primary' %>
+  <h1>Listado de <%= plural_table_name %></h1>
 </div>
 
 <table class="zebra-striped">
@@ -21,9 +21,9 @@
 <% attributes.each do |attribute| -%>
       <td><%%= <%= singular_table_name %>.<%= attribute.name %> %></td>
 <% end -%>
-      <td><%%= link_to 'Show', <%= singular_table_name %> %></td>
-      <td><%%= link_to 'Edit', edit_<%= singular_table_name %>_path(<%= singular_table_name %>) %></td>
-      <td><%%= link_to 'Destroy', <%= singular_table_name %>, <%= key_value :confirm, "'Are you sure?'" %>, <%= key_value :method, ":delete" %> %></td>
+      <td><%%= link_to 'Ver', <%= singular_table_name %> %></td>
+      <td><%%= link_to 'Editar', edit_<%= singular_table_name %>_path(<%= singular_table_name %>) %></td>
+      <td><%%= link_to 'Eliminar', <%= singular_table_name %>, <%= key_value :confirm, "'Esta seguro?'" %>, <%= key_value :method, ":delete" %> %></td>
     </tr>
 <%% end %>
   </tbody>
