--- a/app/views/antecedentes/index.html.erb
+++ b/app/views/antecedentes/index.html.erb
@@ -11,13 +11,8 @@
       <th>Neurologicos</th>
       <th>Psiquiatricos</th>
       <th>Quirurgicos</th>
-      <th>Gineco g</th>
-      <th>Gineco p</th>
-      <th>Gineco c</th>
-      <th>Gineco a</th>
-      <th>Gineco e</th>
-      <th>Gineco v</th>
-      <th>Gineco anticoncepcion</th>
+      <th>Gineco</th>
+      <th>Anticoncepcion</th>
       <th>Toxicos</th>
       <th>Adicciones</th>
       <th>Alergicos</th>
@@ -37,12 +32,7 @@
       <td><%= antecedente.neurologicos %></td>
       <td><%= antecedente.psiquiatricos %></td>
       <td><%= antecedente.quirurgicos %></td>
-      <td><%= antecedente.gineco_g %></td>
-      <td><%= antecedente.gineco_p %></td>
-      <td><%= antecedente.gineco_c %></td>
-      <td><%= antecedente.gineco_a %></td>
-      <td><%= antecedente.gineco_e %></td>
-      <td><%= antecedente.gineco_v %></td>
+      <td>G:<%= antecedente.gineco_g %>/P:<%= antecedente.gineco_p %>/C:<%= antecedente.gineco_c %>/A:<%= antecedente.gineco_a %>/E:<%= antecedente.gineco_e %>/V:<%= antecedente.gineco_v %></td>
       <td><%= antecedente.gineco_anticoncepcion %></td>
       <td><%= antecedente.toxicos %></td>
       <td><%= antecedente.adicciones %></td>
