--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,8 +34,13 @@
       <div class="well">
 		<h5>Menu</h5>
 		<ul>
+			<li><%= link_to "Listado de pacientes", patients_path  %></li>
+		</ul>
+		
+		<h5>Observaciones</h5>
+		<ul>
 			<li><%= link_to "Información sociodemográfica", "/path1"  %></li>
-			<li><%= link_to "Antecedentes", "/path1"  %></li>
+			<li><%= link_to "Antecedentes", antecedentes_path  %></li>
 			<li><%= link_to "Enfermedad actual", "/path1"  %></li>
 			<li><%= link_to "Examen físico", "/path1"  %></li>
 			<li><%= link_to "Diagnóstico", "/path1"  %></li>
@@ -52,11 +57,11 @@
     <div class="content">
       <div class="row">
         <div class="span16">
-<%= yield %>
+			<%= yield %>
         </div>
       </div>
       <footer>
-        <p>&copy; Company 2011</p>
+        <p>&copy; IATM 2012, Derechos Reservados</p>
       </footer>
     </div>
   </div>
