scaffold de enfermedad actual instalado

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -41,7 +41,7 @@
 		<ul>
 			<li><%= link_to "Información sociodemográfica", "/path1"  %></li>
 			<li><%= link_to "Antecedentes", antecedentes_path  %></li>
-			<li><%= link_to "Enfermedad actual", "/path1"  %></li>
+			<li><%= link_to "Enfermedad actual", enfermedad_actuals_path  %></li>
 			<li><%= link_to "Examen físico", "/path1"  %></li>
 			<li><%= link_to "Diagnóstico", "/path1"  %></li>
 			<li><%= link_to "Discapacidad", "/path1"  %></li>
