--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -49,7 +49,7 @@
       </div>
     </div>
     <% flash.each do |name, msg| %>
-      <%= content_tag :div, :class => "container alert-message #{name == :error ? "error" : "success" }", :"data-alert" => "alert" do %>
+      <%= content_tag :div, :class => "span16 container alert-message #{name == :error ? "error" : "success" }", :"data-alert" => "alert" do %>
         <a class="close" href="#">×</a>
         <p><%= msg %></p>
       <% end %>
