Nested resource visit 4 patient

--- a/app/views/visits/edit.html.erb
+++ b/app/views/visits/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @visit %> |
-<%= link_to 'Back', visits_path %>
+<%= link_to 'Show', patient_visit_path %> |
+<%= link_to 'Back', patient_visits_path %>
