--- a/app/views/visits/show.html.erb
+++ b/app/views/visits/show.html.erb
@@ -21,5 +21,5 @@
 </p>
 
 
-<%= link_to 'Edit', edit_visit_path(@visit) %> |
-<%= link_to 'Back', visits_path %>
+<%= link_to 'Edit', edit_patient_visit_path(@patient) %> |
+<%= link_to 'Back', patient_visits_path %>
