Logica para nested resource enfermedad_actual en visit

--- a/app/views/enfermedad_actuals/edit.html.erb
+++ b/app/views/enfermedad_actuals/edit.html.erb
@@ -1,6 +1,6 @@
 <div class="page-header">
-  <%= link_to 'Atras', enfermedad_actuals_path, :class => 'btn' %>
-  <%= link_to 'Ver', @enfermedad_actual, :class => 'btn primary' %>
+  <%= link_to 'Atras', patient_visit_enfermedad_actuals_path, :class => 'btn' %>
+  <%= link_to 'Ver', patient_visit_enfermedad_actual_path, :class => 'btn primary' %>
   <h1>Editando enfermedad actual</h1>
 </div>
 
