--- a/app/views/enfermedad_actuals/new.html.erb
+++ b/app/views/enfermedad_actuals/new.html.erb
@@ -1,5 +1,5 @@
 <div class="page-header">
-  <%= link_to 'Atras', enfermedad_actuals_path, :class => 'btn' %>
+  <%= link_to 'Atras', patient_visit_enfermedad_actual_url, :class => 'btn' %>
   <h1>Nuevo registro de enfermedad actual</h1>
 </div>
 
