--- a/app/views/enfermedad_actuals/show.html.erb
+++ b/app/views/enfermedad_actuals/show.html.erb
@@ -1,6 +1,6 @@
 <div class="page-header">
-  <%= link_to 'Atras', enfermedad_actuals_path, :class => 'btn' %>
-  <%= link_to 'Editar', edit_enfermedad_actual_path(@enfermedad_actual), :class => 'btn primary' %>
+  <%= link_to 'Atras', patient_visit_path(@patient,@visit), :class => 'btn' %>
+  <%= link_to 'Editar', edit_patient_visit_enfermedad_actual_path(@patient,@visit), :class => 'btn primary' %>
   <h1>Registro de enfermedad actual</h1>
 </div>
 
