--- a/app/views/antecedentes/_form.html.erb
+++ b/app/views/antecedentes/_form.html.erb
@@ -1,4 +1,4 @@
-<%= simple_form_for(@antecedente) do |f| %>
+<%= simple_form_for [@patient, @antecedente] do |f| %>
   <% if @antecedente.errors.any? %>
     <div class="alert-message error">
       <%= f.error_notification %>
