--- a/app/views/antecedentes/edit.html.erb
+++ b/app/views/antecedentes/edit.html.erb
@@ -1,6 +1,6 @@
 <div class="page-header">
-  <%= link_to 'Atras', antecedentes_path, :class => 'btn' %>
-  <%= link_to 'Ver', @antecedente, :class => 'btn primary' %>
+  <%= link_to 'Atras', patient_antecedentes_path, :class => 'btn' %>
+  <%= link_to 'Ver', patient_antecedente_path, :class => 'btn primary' %>
   <h1>Editando antecedente</h1>
 </div>
 
