--- a/app/views/antecedentes/new.html.erb
+++ b/app/views/antecedentes/new.html.erb
@@ -1,5 +1,5 @@
 <div class="page-header">
-  <%= link_to 'Back', antecedentes_path, :class => 'btn' %>
+  <%= link_to 'Atras', patient_antecedente_path, :class => 'btn' %>
   <h1>Nuevo antecedente</h1>
 </div>
 
