--- a/app/views/ef_generals/_form.html.erb
+++ b/app/views/ef_generals/_form.html.erb
@@ -1,4 +1,4 @@
-<%= simple_form_for(@ef_general) do |f| %>
+<%= simple_form_for [@patient, @visit , @ef_general] do |f| %>
   <% if @ef_general.errors.any? %>
     <div class="alert-message error">
       <%= f.error_notification %>
