--- a/app/views/enfermedad_actuals/_form.html.erb
+++ b/app/views/enfermedad_actuals/_form.html.erb
@@ -41,6 +41,7 @@
 
   <div class="actions">
     <%= f.button :submit, :class => "btn primary" %>
+	<%= link_to 'Cancelar', :back, :class => "btn" %>
   </div>
 <% end %>
 
