--- a/app/views/visits/show.html.erb
+++ b/app/views/visits/show.html.erb
@@ -1,7 +1,13 @@
+<div class="page-header">
+  <%= link_to 'Ir a paciente', patient_path(@patient), :class => 'btn' %>
+  <%= link_to 'Editar', edit_patient_visit_path(@patient), :class => 'btn primary' %>
+  <% if @visit.enfermedad_actual.nil? %><%= link_to "Añadir enfermedad actual", new_patient_visit_enfermedad_actual_path(@patient,@visit), :class => 'btn primary' %><% end %>
+  <h1>Registro de visita</h1>
+</div>
+
 <p id="notice"><%= notice %></p>
 
 <section id="visit">
-<div class="page-header"><h1>Visita</h1></div>
 <p>
   <b>Visit date:</b>
   <%= @visit.visit_date %>
@@ -21,29 +27,11 @@
   <b>Imaging center:</b>
   <%= @visit.imaging_center %>
 </p>
+
+<p>
+  <b>Enfermedad actual:</b>
+  <%= link_to "Ver", [@patient, @visit, @visit.enfermedad_actual], :class => 'btn primary' if !@visit.enfermedad_actual.nil? %>
+</p>
+
 </div>
 </section>
-
-<section id="enfermedad_actual">
-<div class="page-header"><h1><small>Enfermedad actual</small></h1></div>
-<div class="row">
-<table class="bordered-table zebra-striped">
-  <thead>
-	<tr>
-      <th>Fecha</th>
-      <th>Descripción semiología</th>
-    </tr>
-  </thead>
-
-  <tr>
-    <td><%= link_to @visit.enfermedad_actual.fecha_inicio, [@patient, @visit, @visit.enfermedad_actual] %></td>
-    <td><%= @visit.enfermedad_actual.descripcion_semiol %></td>
-  </tr>
-</table>
-</div>
-</div>
-</section>
-
-<%= link_to 'Editar información de la visita', edit_patient_visit_path(@patient) %> |
-<%= link_to 'Ver paciente', patient_path(@patient) %>
-<% if @visit.enfermedad_actual.nil? %> |<%= link_to "Añadir enfermedad actual", new_patient_visit_enfermedad_actual_path(@patient,@visit) %><% end %>
