--- a/app/views/antecedentes/show.html.erb
+++ b/app/views/antecedentes/show.html.erb
@@ -1,6 +1,6 @@
 <div class="page-header">
-  <%= link_to 'Atras', antecedentes_path, :class => 'btn' %>
-  <%= link_to 'Editar', edit_antecedente_path(@antecedente), :class => 'btn primary' %>
+  <%= link_to 'Ir a paciente', patient_path(@patient), :class => 'btn' %>
+  <%= link_to 'Editar', edit_patient_antecedente_path(@patient), :class => 'btn primary' %>
   <h1>Listado de antecedentes</h1>
 </div>
 
