--- a/app/views/ef_columnas/_form.html.erb
+++ b/app/views/ef_columnas/_form.html.erb
@@ -1,4 +1,4 @@
-<%= simple_form_for(@ef_columna) do |f| %>
+<%= simple_form_for [@patient, @visit , @ef_columna] do |f| %>
   <% if @ef_columna.errors.any? %>
     <div class="alert-message error">
       <%= f.error_notification %>
