--- a/app/views/ef_generals/show.html.erb
+++ b/app/views/ef_generals/show.html.erb
@@ -1,6 +1,6 @@
 <div class="page-header">
-  <%= link_to 'Atras', ef_generals_path, :class => 'btn' %>
-  <%= link_to 'Editar', edit_ef_general_path(@ef_general), :class => 'btn primary' %>
+  	<%= link_to 'Ir a visita', patient_visit_path(@patient,@visit), :class => 'btn' %>
+	<%= link_to 'Editar', edit_patient_visit_ef_general_path(@patient,@visit), :class => 'btn primary' %>
   <h1>Listing ef_generals</h1>
 </div>
 
