--- a/app/views/ef_mentals/show.html.erb
+++ b/app/views/ef_mentals/show.html.erb
@@ -1,6 +1,6 @@
 <div class="page-header">
-  <%= link_to 'Atras', ef_mentals_path, :class => 'btn' %>
-  <%= link_to 'Editar', edit_ef_mental_path(@ef_mental), :class => 'btn primary' %>
+  	<%= link_to 'Ir a visita', patient_visit_path(@patient,@visit), :class => 'btn' %>
+	<%= link_to 'Editar', edit_patient_visit_ef_mental_path(@patient,@visit), :class => 'btn primary' %>
   <h1>Listing ef_mentals</h1>
 </div>
 
