--- a/app/views/enfermedad_actuals/show.html.erb
+++ b/app/views/enfermedad_actuals/show.html.erb
@@ -1,5 +1,5 @@
 <div class="page-header">
-  <%= link_to 'Atras', patient_visit_path(@patient,@visit), :class => 'btn' %>
+  <%= link_to 'Ir a visita', patient_visit_path(@patient,@visit), :class => 'btn' %>
   <%= link_to 'Editar', edit_patient_visit_enfermedad_actual_path(@patient,@visit), :class => 'btn primary' %>
   <h1>Registro de enfermedad actual</h1>
 </div>
