--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -40,7 +40,7 @@
 		<h5>Observaciones</h5>
 		<ul>
 			<li><%= link_to "Información sociodemográfica", "/path1"  %></li>
-			<li><%= link_to "Antecedentes", antecedentes_path  %></li>
+			<li><%= link_to "Antecedentes", patient_antecedentes_path  %></li>
 			<li><%= link_to "Enfermedad actual", patient_visit_enfermedad_actuals_path  %></li>
 			<li><%= link_to "Examen físico", "/path1"  %></li>
 			<li><%= link_to "Diagnóstico", "/path1"  %></li>
