--- a/app/views/patients/_form.html.erb
+++ b/app/views/patients/_form.html.erb
@@ -25,6 +25,6 @@
     <%= f.input :mobile_phone %>
     <div class="actions">
       <%= f.button :submit, :class => 'btn primary' %>
-      <%= button_tag 'Cancelar', :type => :reset, :class => "btn" %>
+      <%= link_to 'Cancelar', :back, :class => "btn" %>
     </div>
 <% end %>
