--- a/app/views/ef_pares/index.html.erb
+++ b/app/views/ef_pares/index.html.erb
@@ -1,6 +1,6 @@
 <div class="page-header">
   <%= link_to 'Nuevo Ef pare', new_ef_pare_path, :class => 'btn primary' %>
-  <h1>Listado de ef_pares</h1>
+  <h1>Listado de examenes de Pares Craneanos</h1>
 </div>
 
 <table class="zebra-striped">
