--- a/app/views/ef_pares/new.html.erb
+++ b/app/views/ef_pares/new.html.erb
@@ -1,6 +1,6 @@
 <div class="page-header">
   <%= link_to 'Atras', ef_pares_path, :class => 'btn' %>
-  <h1>Nuevo ef_pare</h1>
+  <h1>Nuevo Examen de Pares Craneanos</h1>
 </div>
 
 <%= render 'form' %>
