--- a/app/views/ef_pares/show.html.erb
+++ b/app/views/ef_pares/show.html.erb
@@ -1,7 +1,7 @@
 <div class="page-header">
   <%= link_to 'Atras', ef_pares_path, :class => 'btn' %>
   <%= link_to 'Editar', edit_ef_pare_path(@ef_pare), :class => 'btn primary' %>
-  <h1>Listing ef_pares</h1>
+  <h1>Examen fisico: Pares Craneanos</h1>
 </div>
 
 <dl>
