--- a/app/views/common/_header.html.erb
+++ b/app/views/common/_header.html.erb
@@ -1,1 +1,1 @@
-<h6>Paciente xxxxxx, Visita xx/xx/xx</h6>
+<h6>Paciente: <%= patient.first_name %> <%= patient.last_name %>, Visita: <%= visit.visit_date.to_s(:short) %></h6>
