--- a/app/views/enfermedad_actuals/_form.html.erb
+++ b/app/views/enfermedad_actuals/_form.html.erb
@@ -11,8 +11,10 @@
     <%= f.input :duracion %>
     <%= f.input :descripcion_semiol %>
     <%= f.input :dificultad_caminar %>
+	<div class= "row">
     <%= f.input :compromiso_motor_ext_sup %>
     <%= f.input :compromiso_motor_ext_inf %>
+	</div>
     <%= f.input :compromiso_motor_facial %>
     <%= f.input :compromiso_sens_ext_sup %>
     <%= f.input :compromiso_sens_ext_inf %>
